# PyQlementine

./: .gitignore  CMakeCache.txt  CONTRIBUTING.md  README.md  justfile  project.py  pyproject.toml  theme.py
.github/workflows/: build-package.yml  ci.yml  publish-pyqt6.yml  publish-pyside6.yml  pypi.yml
examples/: demo.py  demo_qt.py  simple.py
patches/: 0001-fix-expander-null-content-crash.patch  0002-fix-groupbox-mnemonic-processing.patch  0003-add-scale-factor-to-qlementine-style.patch  153-add-icon-from-svg-data.patch  154-fix-drawRoundedRect-name.patch  161-fix-focus-frame-mapto-on-reparent.patch  162-fix-combobox-custom-delegate-replacement.patch  fix-getBlurredImage-format-assumption.patch
scripts/: repair_wheel.py
sip/: ColorButton.sip  PyQt6Qlementine.sip  Switch.sip
tests/: _qt_compat.py  test_badge_utils.py  test_color_utils.py  test_enums.py  test_font_utils.py  test_geometry_utils.py  test_icon_path_getter.py  test_icon_utils.py  test_image_utils.py  test_import.py  test_layout_utils.py  test_menu_utils.py  test_paint_all_widgets.py  test_primitive_utils.py  test_qlementine_focus_frame.py  test_state_utils.py  test_style_extended.py  test_style_utils.py  test_theme.py  test_widget_utils.py  test_widgets.py
tests/utils/: test_badge_utils.py  test_color_utils.py  test_font_utils.py  test_geometry_utils.py  test_icon_path_getter.py  test_icon_utils.py  test_image_utils.py  test_layout_utils.py  test_menu_utils.py  test_primitive_utils.py  test_state_utils.py  test_style_utils.py  test_widget_utils.py
